--- a/small_n_stats_WPF/small_n_stats_WPF/app.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/app.config
@@ -19,6 +19,12 @@
             <setting name="MainLeft" serializeAs="String">
                 <value>200</value>
             </setting>
+            <setting name="OmnibusTauTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="OmnibusTauLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
         </small_n_stats_WPF.Properties.Settings>
     </userSettings>
   <runtime>
