--- a/small_n_stats_WPF/small_n_stats_WPF/app.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/app.config
@@ -25,6 +25,24 @@
             <setting name="OmnibusTauLeft" serializeAs="String">
                 <value>200</value>
             </setting>
+            <setting name="NonOverlapTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="NonOverlapLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="NapTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="NapLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="SenTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="SenLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
         </small_n_stats_WPF.Properties.Settings>
     </userSettings>
   <runtime>
