Attributions, clarification, licenses.

--- a/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_WPF.csproj
+++ b/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_WPF.csproj
@@ -160,8 +160,12 @@
     <Compile Include="ViewModels\OmnibusTauViewModel.cs" />
     <Compile Include="ViewModels\TheilSenViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="ViewModels\ViewModelLicense.cs" />
     <Compile Include="Views\InformationWindow.xaml.cs">
       <DependentUpon>InformationWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\License.xaml.cs">
+      <DependentUpon>License.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -213,6 +217,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\InformationWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\License.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -272,6 +280,21 @@
     <Resource Include="Images\edit-copy.png" />
     <Resource Include="Images\text-x-preview.png" />
     <Resource Include="Images\x-office-address-book.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\License_ReogridSpreadsheet.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\COPYING_CCBYSA3.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\License_Ben_Tilly.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
