Add source to all releases

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/small_n_stats_WPF/small_n_stats_WPF/Source/small-n-stats-WPF-master-e73fd4c3a57571d634ae08c83f588852883873d9.zip
