--- a/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_WPF.csproj
+++ b/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_WPF.csproj
@@ -31,7 +31,7 @@
     <SuiteName>Single Case Effect Sizes</SuiteName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>index.html</WebPage>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>8</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -210,7 +210,9 @@
     </None>
     <AppDesigner Include="Properties\" />
     <None Include="small_n_stats_WPF_TemporaryKey.pfx" />
-    <None Include="Source\small-n-stats-WPF-master-e73fd4c3a57571d634ae08c83f588852883873d9.zip" />
+    <Content Include="Source\small-n-stats-WPF-master-e73fd4c3a57571d634ae08c83f588852883873d9.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Graphics\ChartingWindow.xaml">
@@ -296,6 +298,18 @@
     <Resource Include="Resources\License_Ben_Tilly.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <PublishFile Include="Source\small-n-stats-WPF-master-e73fd4c3a57571d634ae08c83f588852883873d9.zip">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>Include</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
