--- a/small_n_stats_WPF/small_n_stats_WPF/app.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/app.config
@@ -43,6 +43,30 @@
             <setting name="SenLeft" serializeAs="String">
                 <value>200</value>
             </setting>
+            <setting name="BatchDiscountTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="BatchDiscountLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="EscalationTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="EscalationLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="DiscountTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="DiscountLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="DemandTop" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="DemandLeft" serializeAs="String">
+                <value>200</value>
+            </setting>
         </small_n_stats_WPF.Properties.Settings>
     </userSettings>
   <runtime>
