--- a/small_n_stats_WPF/small_n_stats_WPF/packages.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.76.0" targetFramework="net40" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net40" />
   <package id="DynamicInterop" version="0.7.4" targetFramework="net40" />
-  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
   <package id="R.NET.Community" version="1.6.5" targetFramework="net40" />
 </packages>
