License for beezdemand

--- a/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
+++ b/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
@@ -213,6 +213,7 @@
     <Content Include="LICENSE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\License_Beezdemand.txt" />
     <Content Include="Source\Small-N-Stats---Demand-Calculator-master.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
