--- a/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
+++ b/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
@@ -214,6 +214,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\License_Beezdemand.txt" />
+    <None Include="Resources\GraphingExponential.txt" />
+    <None Include="Resources\GraphingExponentiated.txt" />
     <Content Include="Source\Small-N-Stats---Demand-Calculator-master.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
