Guided decision-making introduced

--- a/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
+++ b/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
@@ -220,6 +220,8 @@
     <None Include="Resources\GraphingExponential.txt" />
     <None Include="Resources\GraphingExponentiated.txt" />
     <None Include="Resources\SteinSystematicCheck.txt" />
+    <None Include="Resources\ExponentialDemandFunctionsKFitted.txt" />
+    <None Include="Resources\ExponentiatedDemandFunctionsKFitted.txt" />
     <Content Include="Source\Small-N-Stats---Demand-Calculator-master.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
