--- a/small_n_stats_WPF/small_n_stats_WPF/app.config
+++ b/small_n_stats_WPF/small_n_stats_WPF/app.config
@@ -67,6 +67,10 @@
             <setting name="DemandLeft" serializeAs="String">
                 <value>200</value>
             </setting>
+            <setting name="RecentFiles" serializeAs="String">
+                <value>
+                </value>
+            </setting>
         </small_n_stats_WPF.Properties.Settings>
     </userSettings>
   <runtime>
