--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Settings.settings
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Settings.settings
@@ -63,7 +63,8 @@
       <Value Profile="(Default)">200</Value>
     </Setting>
     <Setting Name="RecentFiles" Type="System.String" Scope="User">
-      <Value Profile="(Default)"> </Value>
+      <Value Profile="(Default)">
+                </Value>
     </Setting>
   </Settings>
 </SettingsFile>
