--- a/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
+++ b/small_n_stats_WPF/small_n_stats_WPF/small_n_stats_DEMAND.csproj
@@ -31,7 +31,7 @@
     <SuiteName>Demand Calculator</SuiteName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>index.html</WebPage>
-    <ApplicationRevision>19</ApplicationRevision>
+    <ApplicationRevision>20</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -222,6 +222,8 @@
     <None Include="Resources\SteinSystematicCheck.txt" />
     <None Include="Resources\ExponentialDemandFunctionsKFitted.txt" />
     <None Include="Resources\ExponentiatedDemandFunctionsKFitted.txt" />
+    <None Include="Resources\ExponentialDemandFunctionsKSet.txt" />
+    <None Include="Resources\ExponentiatedDemandFunctionKSet.txt" />
     <Content Include="Source\DemandCalculator-93a1ad5831559d04a3fcc2ed6402fe97ea3400b5.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
